Fix "remove" buttons being out of place in Firefox

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1804,6 +1804,7 @@ table.field-multiple-table {
       }
       td:not([class]){
         flex: 100%;
+        display: block;
       }
     }
   }
